Feat : ajax image example, put, login

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -26,7 +26,7 @@
     }
     </style>
 
-    <h1>ARTICLE LIST</h1>
+    <h1>ARTICLE LIST {{ request.user }}</h1>
 
     <div id="main-container"></div>
 
