--- a/templates/map_views.html
+++ b/templates/map_views.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -42,14 +43,15 @@
             geocoder.geocode({'location': latlng}, function(results, status) {
                 if (status === 'OK') {
                     if (results[0]) {
+                        var formattedAddress = transformAddress(results[0].formatted_address);
                         var infowindow = new google.maps.InfoWindow({
-                            content: results[0].formatted_address
+                            content: formattedAddress
                         });
                         infowindow.open(map, new google.maps.Marker({
                             position: latlng,
                             map: map
                         }));
-                        document.getElementById('address').textContent = results[0].formatted_address;
+                        document.getElementById('address').textContent = formattedAddress;
                     } else {
                         window.alert('No results found');
                     }
@@ -67,6 +69,53 @@
                          'Error: Your browser doesn\'t support geolocation.'
             });
             infoWindow.open(map);
+        }
+
+        function transformAddress(address) {
+            var regionAbbreviation = {
+                "서울특별시": "서울",
+                "부산광역시": "부산",
+                "대구광역시": "대구",
+                "인천광역시": "인천",
+                "광주광역시": "광주",
+                "대전광역시": "대전",
+                "울산광역시": "울산",
+                "세종특별자치시": "세종",
+                "경기도": "경기",
+                "강원도": "강원",
+                "충청북도": "충북",
+                "충청남도": "충남",
+                "전라북도": "전북",
+                "전라남도": "전남",
+                "경상북도": "경북",
+                "경상남도": "경남",
+                "제주특별자치도": "제주"
+            };
+
+            var specialCases = [
+                "성남시", "수원시", "안양시", "부천시", 
+                "안산시", "고양시", "용인시", "청주시", 
+                "천안시", "전주시", "포항시", "창원시"
+            ];
+
+            // 주소를 공백으로 분리하여 리스트로 변환
+            var parts = address.split(' ');
+
+            // 시/도를 변환
+            if (regionAbbreviation[parts[1]]) {
+                parts[1] = regionAbbreviation[parts[1]];
+            }
+
+            // 특수 케이스 처리
+            for (var i = 0; i < specialCases.length; i++) {
+                if (parts[2].startsWith(specialCases[i])) {
+                    parts[2] = specialCases[i] + " " + parts[2].substring(specialCases[i].length);
+                    break;
+                }
+            }
+
+            // 변환된 주소 반환
+            return parts[1] + ' ' + parts[2];
         }
     </script>
 </head>
