--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 <style>
+    .profile-img {
+        width: 15px;
+        height: 15px;
+    }
     #main-container {
         background-color: lightgray;
         display: flex;
@@ -25,9 +29,19 @@
         height: 50px;
     }
     </style>
-
-    <h1>ARTICLE LIST {{ request.user }}</h1>
-
+    {% block title %}
+    <title>오.운.완</title>
+    {% endblock title %}
+    <h1>ARTICLE LIST</h1>
+    {% if request.user.is_authenticated %}
+        <h2>{{ request.user }}</h2>
+    {% endif %}
+    <a class="nav-link" href="{% url 'articles:list-template'%}">목록</a>
+    {% if request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'articles:create-template' %}">글 작성</a>
+    {% else %}
+        <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
+    {% endif %}
     <div id="main-container"></div>
 
     <script>
@@ -43,15 +57,21 @@
                     const date = new Date(article.created_at)
                     let articleHTML = `
                 <div class="content">${article.content}</div>
-                <div class="like">좋아요: ${article.like_count}</div>
-                <div class="hashtags"></div>
                 <div class="created-at">${date.getFullYear()}-${date.getMonth()+1}-${date.getDate()}</div>
+                <div class="like">좋아요: ${article.like_count}</div>
+                <div class="comment"><a href="/articles/${article.id}/template/">댓글 ${article.comments_count}개 모두 보기</a></div>
+                <div class="hashtags"></div>
             `;
 
             if (article.image) {
                 articleHTML = `<img src='${article.image}'/>` + articleHTML;
             }
-            articleHTML=`<div class="author">${article.author_username}</div>`+articleHTML
+            if (article.author_profile_img) {
+                articleHTML=`<div class="author"><img src='${article.author_profile_img}' class="profile-img"/> ${article.author_username}</div>`+articleHTML
+            }
+            else{
+                articleHTML=`<div class="author"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${article.author_username}</div>`+articleHTML
+            }
             articleContainer.innerHTML = articleHTML;
                     mainContainer.appendChild(articleContainer)
                     const hashtagsContainer = articleContainer.querySelector('.hashtags');
