articles:게시글, 댓글 프론트 CRUD 구현 완료

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -53,7 +53,7 @@
             },
             success: function(response) {
                 console.log("success : ",response);
-                location.href=""
+                location.href="{% url 'articles:list-template'%}"
             },
             error: function(error) {
                 console.log("error : ",error);
