--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -59,7 +59,7 @@
                     let articleHTML = `
                 <div class="content">${article.content}</div>
                 <div class="created-at">${date.getFullYear()}-${date.getMonth()+1}-${date.getDate()}</div>
-                <div class="like">좋아요: ${article.like_count}</div>
+                <div class="like">좋아요: ${article.like_count}개</div>
                 <div class="comment"><a href="/articles/${article.id}/template/">댓글 ${article.comments_count}개 모두 보기</a></div>
                 <div class="hashtags"></div>
             `;
