--- a/articles/templates/articles/comment_detail.html
+++ b/articles/templates/articles/comment_detail.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block content %}
 <style>
+    .profile-img{
+        width: 15px;
+        height: 15px;
+    }
     .comment-profile-img{
         width: 15px;
         height: 15px;
@@ -20,15 +24,52 @@
 <a class="nav-link" href="{% url 'articles:detail-template' comment.article.id %}">게시글로 돌아가기</a>
 <br>
 <div id="main-container"></div>
-<form onsubmit="updateArticleComment(event, '{{ commentId }}')">
-    <br>
-    <input name="comment" type="text" value="{{ comment.comment }}" placeholder="댓글을 입력해주세요.">
-    <br>
-    <button>댓글 수정</button>
-</form>
+<div id="like-users">좋아요를 누른 유저: 
+    {% for user in like_users %}
+        {% if user.profile_img %}
+            <img src="{{ user.profile_img.url }}" class="profile-img"/> {{ user.username }} 
+        {% else %}
+            <img src="{% static 'accounts/user.png' %}" class="profile-img"/> {{ user.username }} 
+        {% endif %}
+    {% endfor %}
+</div>
+<br>
+{% if request.user == comment.author %}
+    <form onsubmit="updateArticleComment(event, '{{ commentId }}')">
+        <br>
+        <input name="comment" type="text" value="{{ comment.comment }}" placeholder="댓글을 입력해주세요.">
+        <br>
+        <button>댓글 수정</button>
+    </form>
+{% endif %}
 
 <script>
     const UserId = "{{ request.user.id }}";
+    function likeComment(commentId) {
+            $.ajax({
+            type: "POST",
+            url: `/articles/comment/${commentId}/like/`,
+            success: function(response) {
+                location.reload();
+            },
+            error: function(xhr, textStatus, errorThrown) {
+                alert("좋아요 실패");
+            }
+        });
+        }
+
+        function dislikeComment(commentId) {
+            $.ajax({
+            type: "DELETE",
+            url: `/articles/comment/${commentId}/like/`,
+            success: function(response) {
+                location.reload();
+            },
+            error: function(xhr, textStatus, errorThrown) {
+                alert("좋아요 취소 실패");
+            }
+        });
+        }
     $(document).ready(function () {
     $.ajax({
         type: "GET",
@@ -42,10 +83,17 @@
             const up_date = new Date(comment.updated_at)
             let commentHTML = `
             <div class="comment">${comment.comment}</div>
-            <div class="like">좋아요: ${comment.like_count}</div>
+            <div class="like">
+                <a href="#" onclick="${isLiked(comment)? `dislikeComment(${comment.id});` : `likeComment(${comment.id});`} return false;">
+                ${isLiked(comment) ? '좋아요 취소' : '좋아요'}
+                </a>: ${comment.like_count}개
+            </div>
             <div class="created-at">작성일: ${date.getFullYear()}-${date.getMonth()+1}-${date.getDate()}</div>
             <div class="updated-at">수정일: ${up_date.getFullYear()}-${up_date.getMonth()+1}-${up_date.getDate()}</div>
         `;
+            function isLiked(comment) {
+                return comment.like_users.includes(parseInt(UserId));
+            }
             if (comment.author_profile_img) {
                 commentHTML=`<div class="author"><img src='${comment.author_profile_img}' class="comment-profile-img"/> ${comment.author_username}</div>`+commentHTML
             }
