--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -42,6 +42,7 @@
     {% else %}
         <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
     {% endif %}
+    <a class="nav-link" href="{% url 'articles:saved-list-template'%}">저장목록 조회</a>
     <div id="main-container"></div>
 
     <script>
