--- a/articles/templates/articles/hashtag_search.html
+++ b/articles/templates/articles/hashtag_search.html
@@ -28,50 +28,23 @@
         width: 50px;
         height: 50px;
     }
-    </style>
-    {% block title %}
-    <title>오.운.완</title>
-    {% endblock title %}
-    <h1>ARTICLE LIST</h1>
+</style>
+{% block title %}
+    <title>#{{ hashtag }} 검색 기록</title>
+{% endblock title %}
+
+    <h1>HASHTAG SEARCH</h1>
     {% if request.user.is_authenticated %}
         <h2>{{ request.user }}</h2>
     {% endif %}
-    <a class="nav-link" href="{% url 'articles:list-template'%}">목록</a>
-    {% if request.user.is_authenticated %}
-        <a class="nav-link" href="{% url 'articles:create-template' %}">글 작성</a>
-    {% else %}
-        <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
-    {% endif %}
-    <a class="nav-link" href="{% url 'articles:saved-list-template'%}">저장목록 조회</a>
-    <div id="main-container"><div id="recommend-container" style="position: absolute; right: 20px; bottom: 600px;">프로필 추천</div></div>
+    <h3>#{{ hashtag }}</h3>
+    <a class="nav-link" href="{% url 'articles:list-template'%}">게시글 목록</a>
+    <div id="main-container"></div>
     <script>
         const UserId = "{{ request.user.id }}";
         $.ajax({
             type: "GET",
-            url:"/accounts/auth/recommend/",
-            success: function (response) {
-                console.log(response)
-                const recommendContainer = document.getElementById('recommend-container')
-                response.forEach(function (user) {
-                    const userContainer =document.createElement('div')
-                    userContainer.classList.add('user-container')
-                    let userHTML = `
-                    <div class="address">${user.address}</div>
-                    `;
-                    if (user.profile_img) {
-                        userHTML=`<div class="user"><img src='${user.profile_img}' class="profile-img"/> ${user.username}</div>`+userHTML
-                    }
-                    else{
-                        userHTML=`<div class="user"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${user.username}</div>`+userHTML
-                    }
-                    userContainer.innerHTML = userHTML;
-                    recommendContainer.appendChild(userContainer)
-                })
-            }
-        })
-        $.ajax({
-            type: "GET",
-            url: "/articles/",
+            url: "/articles/search/{{ hashtag }}/",
             success: function (response) {
                 console.log(response)
                 const mainContainer = document.getElementById('main-container')
