--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -28,6 +28,11 @@
         width: 50px;
         height: 50px;
     }
+    .hashtags a {
+        color: #2f8ad1;
+        text-decoration: none;
+        margin-right: 5px;
+    }
     </style>
     {% block title %}
     <title>오.운.완</title>
